# refracto-sc-crowdfund

./: README.md  mxsc-template.toml
demo-usdc-faucet/: .gitignore  Cargo.toml
loan-crowdfund-sc/: Cargo.toml
loan-crowdfund-sc/meta/: Cargo.toml
loan-crowdfund-sc/scenarios/: empty.scen.json
loan-crowdfund-sc/scripts/: config.json  setup.js  upgradeRepaymentSc.js
loan-crowdfund-sc/src/: admin.rs  beneficiary.rs  common.rs  constants.rs  kyc.rs  lib.rs  permissions.rs
loan-crowdfund-sc/src/interactors/: loan_repayment_sc_interactor.rs  mod.rs
loan-crowdfund-sc/src/storage/: config.rs  mod.rs  payments.rs
loan-crowdfund-sc/src/types/: crowdfunding_state.rs  crowdfunding_state_ui_context.rs  mod.rs  unlock_schedule.rs
loan-crowdfund-sc/tests/: main.rs
loan-crowdfund-sc/tests/core_logic/: claim.rs  create_project.rs  interest_and_fees_calc.rs  investment.rs  mod.rs  repayments.rs
loan-crowdfund-sc/tests/invest/: cool_off_withdrawal.rs  fund_allocation.rs  mod.rs  restrictions.rs
loan-crowdfund-sc/tests/project_funding_state/: basic_state_transition.rs  mod.rs  specific_state_transitions.rs
loan-crowdfund-sc/tests/test_state/: bc_state_interactions.rs  checks.rs  interactions.rs  mockups.rs  mod.rs
loan-crowdfund-sc/tests/test_state/test_contracts/: loan-refund-escrow-sc.wasm
loan-crowdfund-sc/wasm/: Cargo.toml
loan-crowdfund-sc/wasm/src/: lib.rs
loan-refund-escrow-sc/: .gitignore  Cargo.toml  mxsc-template.toml
src/: admin.rs  beneficiary.rs  common.rs  constants.rs  kyc.rs  lib.rs
tests/: empty_scenario_go_test.rs  main.rs  (+1 more)
(+42 files in other folders)
