[package]
name = "loan-crowdfund-sc"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
num-bigint = "0.4.2"

[dependencies.multiversx-sc]
version = "0.46.1"

[dev-dependencies.multiversx-sc-scenario]
version = "0.46.1"

[dependencies.loan-refund-escrow-sc]
path = "../loan-refund-escrow-sc"